2010-12-18  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/libgen.c:
	fix segmentation fault in basename() and dirname()

2010-12-18  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	use _tzset instead of tzset with vc++

2010-12-12  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_libgen.c:
	* src/lib/evil_libgen.h:
	add dirname() function

2010-12-12  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	add usleep() for vc++

2010-12-10  Vincent Torri  <doursse at users dot sf dot net>

	reviewed by: Vincent Torri
	patch by: Vincent Richomme

	* src/lib/evil_unistd.c:
	remove warning

2010-11-06  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil_string.h:
	Fix doxygen documentation

2010-10-29  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	define offsetof for Windows CE

2010-10-22  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Makefile.am:
	* src/lib/dirent.h:
	* src/lib/evil_dirent.c:
	use our own dirent structure and implementation instead of
	mingw one.

2010-09-14  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Makefile.am:
	* src/lib/Evil.h:
	* src/lib/evil_time.c:
	* src/lib/evil_time.h:
	add locatime_r() for calendar in Elementary.

2010-05-29  Vincent Torri  <doursse at users dot sf dot net>

	* doc/Doxyfile:
	define _MSC_VER so that code guarded by it can
	be processed by doxygen

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	vasprintf() is also not in mingw crt

	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	getpid is declared and defined in mingw crt

2010-04-14  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	add vasprintf() function

2010-04-03  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	mkdir() does not accept 2 arguments.
	Define hypot to remove huge amount of warnings in